# crux

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
planner/: admin.py  forms.py  models.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_alter_activitytype_unique_together_remove_plan_user_and_more.py
planner/templates/planner/: activity_confirm_delete.html  activity_form.html  activity_list.html  base.html  index.html  plan_detail.html  plan_form.html
planner/templatetags/: planner_extras.py
