[project]
name = "crux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0.1",
    "django-bootstrap5>=23.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
    "commitizen>=3.13.0",
    "pytest-django>=4.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
